kubernetes/5-backend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-be
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp-be
  template:
    metadata:
      labels:
        app: demoapp-be
    spec:
      containers:
        - name: demoapp-be
          image: pkdemoappneacr01.azurecr.io/demoapp-be:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp-be
  namespace: backend
spec:
  selector:
    app: demoapp-be
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-be-ingress
  namespace: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 132-164-227-30.sslip.io
      secretName: demoapp-be-tls
  rules:
    - host: 132-164-227-30.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-be
                port:
                  number: 3000
